added box shadows, pause/play functionality during game, borders for cards

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <div class="accuracy"></div>
         <div class="gamesPlayed"></div>
         <div class="hp"></div>
+        <button class="pauseAudioButton">PAUSE/PLAY AUDIO</button>
     </div>
 </div>
 <div class="gameStart">
