added about page

--- a/index.html
+++ b/index.html
@@ -150,7 +150,24 @@
 <div class="gameStart">
     <div class="begin">
         <button class="startButton">NEW GAME</button>
+        <button class="aboutButton">ABOUT</button>
     </div>
+</div>
+<div class="aboutPage">
+    <button class="xButton"> X </button>
+    <ul class="aboutDetails">
+        <li>CLICK CARDS TO FLIP THEM</li>
+        <br>
+        <li>MATCH 2 CARDS TO EACH OTHER</li>
+        <br>
+        <li>YOUR HP IS ON THE BOTTOM RIGHT</li>
+        <br>
+        <li>WHEN IT REACHES 0, GAME OVER</li>
+        <br>
+        <li>THE ENEMY'S HP IS ON THE BOTTOM LEFT</li>
+        <br>
+        <li>WHEN IT REACHES 0, VICTORY!</li>
+    </ul>
 </div>
 <div class="gameOver">
     <button class="continue">CONTINUE?</button>
