added player and enemy name plates, in game rule pop-up

--- a/index.html
+++ b/index.html
@@ -132,12 +132,14 @@
 </div>
 <div class="stats">
     <div class="enemyStats">
+        <div class="enemyNamePlate">ENEMY <br>BLUE SLIME</div>
         <div class="progress" id="enemyHealth">
             <div class="progress-bar" role="progressbar" id="enemyHpBar" aria-valuenow="1800" aria-valuemin="0" aria-valuemax="1800" style="width: 100%"></div>
             <div>
                 <span class="enemyHp">1800/1800</span>
             </div>
         </div>
+        <button class="gameRules">GAME RULES</button>
     </div>
     <div>
         <img src="images/blackMageIdle.gif" class="blackMageIdle">
@@ -149,6 +151,7 @@
         <img src="images/enemyDamaged.gif" class="enemyDamaged">
     </div>
     <div class="info">
+        <div class="infoTitle">STATS</div>
         <div class="matches"></div>
         <div class="attempts"></div>
         <div class="accuracy"></div>
@@ -159,6 +162,7 @@
                 <span class="playerHp">999/999</span>
             </div>
         </div>
+        <div class="playerNamePlate">PLAYER <br> BLACK MAGE</div>
         <button class="pauseAudioButton">PAUSE/PLAY AUDIO</button>
     </div>
 </div>
