added better mobile responsiveness for most popular phone sizes

--- a/index.html
+++ b/index.html
@@ -153,10 +153,12 @@
     </div>
     <div class="info">
         <div class="infoTitle">STATS</div>
+        <div class="portraitStats">(CLICK HERE)</div>
         <div class="matches"></div>
         <div class="attempts"></div>
         <div class="accuracy"></div>
         <div class="gamesPlayed"></div>
+        <div class="portraitStatsHide">HIDE</div>
         <div class="progress" id="playerHealth">
             <div class="progress-bar" role="progressbar" id="playerHpBar" aria-valuenow="999" aria-valuemin="0" aria-valuemax="999" style="width: 100%"></div>
             <div>
