various styling changes, hover effects tuned, sound effects tuned

--- a/index.html
+++ b/index.html
@@ -19,77 +19,37 @@
     <div class="container rowContainer">
     <div class="row cardRow">
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container rowContainer">
-    <div class="row cardRow">
-        <div class="cardContainer">
-            <div class="card">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-        <div class="cardContainer">
-            <div class="card">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-        <div class="cardContainer">
-            <div class="card">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-        <div class="cardContainer">
-            <div class="card">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-        <div class="cardContainer">
-            <div class="card">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-        <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
@@ -99,37 +59,77 @@
 <div class="container rowContainer">
     <div class="row cardRow">
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
         </div>
         <div class="cardContainer">
-            <div class="card">
+            <div class="card unmatched">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container rowContainer">
+    <div class="row cardRow">
+        <div class="cardContainer">
+            <div class="card unmatched">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
+        <div class="cardContainer">
+            <div class="card unmatched">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
+        <div class="cardContainer">
+            <div class="card unmatched">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
+        <div class="cardContainer">
+            <div class="card unmatched">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
+        <div class="cardContainer">
+            <div class="card unmatched">
+                <div class="front"></div>
+                <div class="back"></div>
+            </div>
+        </div>
+        <div class="cardContainer">
+            <div class="card unmatched">
                 <div class="front"></div>
                 <div class="back"></div>
             </div>
@@ -208,6 +208,7 @@
 <div id="initialDiv">
     INITIALS: <input id="initials" type="text" maxlength="3">
     <button class="submitInitials"> ADD </button>
+    <div id='score'> SCORE : </div>
 </div>
 <div id="highScoreDiv">
     <div>
