button outline styling changes, cursor audio added to pause music button

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </div>
         </div>
         <div class="playerNamePlate">PLAYER <br> BLACK MAGE</div>
-        <button class="pauseAudioButton">PAUSE/PLAY AUDIO</button>
+        <button class="pauseAudioButton">PAUSE/PLAY MUSIC</button>
     </div>
 </div>
 <div class="gameStart">
